--- a/app/src/main/res/layout/activity_compete.xml
+++ b/app/src/main/res/layout/activity_compete.xml
@@ -65,24 +65,24 @@
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Do Exercise"
+                android:text="Play"
                 android:id="@+id/compete"
                 android:textColor="@color/blue"
                 android:textSize="30sp"
                 android:onClick="Problems"
                 android:layout_gravity="center"
-                android:layout_marginTop="30dp"/>
+                android:layout_marginTop="20dp"/>
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Display Ranking"
+                android:text="Top Scores"
                 android:id="@+id/ranked"
                 android:textColor="@color/blue"
                 android:textSize="30sp"
                 android:onClick="ranked"
                 android:layout_gravity="center"
-                android:layout_marginTop="20dp"/>
+                android:layout_marginTop="10dp"/>
 
             <Button
                 android:layout_width="match_parent"
@@ -92,27 +92,33 @@
                 android:textSize="30sp"
                 android:onClick="addQuestion"
                 android:layout_gravity="center"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="10dp"
+                />
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Main Menu"
+                android:textColor="@color/blue"
+                android:textSize="30sp"
+                android:onClick="clickMainMenu"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                />
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Log out"
+                android:id="@+id/button7"
+                android:textColor="@color/Red"
+                android:textSize="30dp"
+                android:onClick="logoutC"
+                android:layout_marginTop="10dp"
                 />
 
         </LinearLayout>
 
     </LinearLayout>
-
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Log out"
-        android:id="@+id/button7"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:textColor="@color/Red"
-        android:textSize="20dp"
-        android:onClick="logoutC"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="10dp"
-        />
 
 </RelativeLayout>
