--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -89,7 +89,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
-            android:textColor="@color/blue"/>
+            android:textColor="@color/blue"
+            android:onClick="cancelClicked"/>
 
     </LinearLayout>
 
