--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -28,11 +28,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:layout_marginTop="40dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
-        android:orientation="vertical">
-
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_gravity="center">
 
         <EditText
             android:id="@+id/email"
@@ -60,19 +60,6 @@
             android:textColorHint="@color/white"
             android:paddingTop="20dp"/>
 
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginTop="40dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_gravity="center">
-
         <Button
             android:id="@+id/btn_sign_up"
             android:text="Sign Up"
@@ -80,7 +67,8 @@
             android:layout_height="wrap_content"
             android:textColor="@color/white"
             android:layout_gravity="center"
-            android:background="@color/blue"/>
+            android:background="@color/blue"
+            android:layout_marginTop="50dp"/>
 
         <Button
             android:id="@+id/cancel_sign_up"
