--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -5,15 +5,15 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.example.thait.mathetistics.SignUp"
-    android:background="#2196F3">
+    android:background="@color/white">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="vertical"
-        android:padding="15dp"
-        android:background="#A4A4A4">
+        android:layout_marginTop="20dp"
+        android:padding="15dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -21,7 +21,7 @@
             android:padding="2dp"
             android:text="Sign Up"
             android:textSize="25sp"
-            android:textColor="@color/white"
+            android:textColor="@color/blue"
             android:textStyle="bold"/>
     </LinearLayout>
 
@@ -29,7 +29,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="30dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:layout_gravity="center">
@@ -39,7 +39,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Email"
-            android:textColorHint="@color/white"
+            android:textColorHint="@color/black"
             android:paddingTop="20dp"/>
 
         <EditText
@@ -48,7 +48,7 @@
             android:layout_height="wrap_content"
             android:hint="Password"
             android:ems="10"
-            android:textColorHint="@color/white"
+            android:textColorHint="@color/black"
             android:paddingTop="20dp"/>
 
         <EditText
@@ -57,7 +57,7 @@
             android:layout_height="wrap_content"
             android:hint="Confirm Password"
             android:ems="10"
-            android:textColorHint="@color/white"
+            android:textColorHint="@color/black"
             android:paddingTop="20dp"/>
 
         <Button
