--- a/app/src/main/res/layout/activity_rank.xml
+++ b/app/src/main/res/layout/activity_rank.xml
@@ -20,6 +20,10 @@
         android:id="@+id/textView5"
         android:textColor="@color/OrangeRed"/>
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/textView5">
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -35,7 +39,8 @@
             android:id="@+id/display"
             android:textColor="@color/colorPrimary"
             android:textSize="30dp"/>
-    </LinearLayout>
 
+    </LinearLayout>
+    </ScrollView>
 
 </RelativeLayout>
