--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,7 +17,7 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/MathRelayLogo"/>
+            android:src="@drawable/mathrelaylogo"/>
     </LinearLayout>
 
     <LinearLayout
