--- a/app/src/main/res/layout/activity_rank.xml
+++ b/app/src/main/res/layout/activity_rank.xml
@@ -28,9 +28,9 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/textView5">
+        android:layout_below="@+id/header">
     <LinearLayout
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
@@ -38,13 +38,25 @@
         android:layout_below="@+id/header">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Large Text"
+            android:text="Username"
             android:id="@+id/display"
-            android:textColor="@color/colorPrimary"
-            android:textSize="30dp"/>
+            android:textColor="@color/white"
+            android:textSize="25dp"/>
+
+        <TextView
+            android:layout_width="75dp"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="105"
+            android:id="@+id/score_id"
+            android:textSize="25dp"
+            android:textColor="@color/DarkOrange"
+            android:layout_gravity="right"
+            android:layout_marginLeft="20dp"/>
+
 
     </LinearLayout>
     </ScrollView>
