--- a/app/src/main/res/layout/activity_exercise.xml
+++ b/app/src/main/res/layout/activity_exercise.xml
@@ -21,13 +21,13 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Question"
-        android:textSize="25dp"
-        android:textColor="@color/white"
-        android:id="@+id/textq" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Question"
+                android:textSize="25dp"
+                android:textColor="@color/white"
+                android:id="@+id/textq" />
         </ScrollView>
 
     </LinearLayout>
@@ -55,83 +55,54 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:layout_below="@+id/top"
         android:id="@+id/linearLayout3">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <Button
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="ans1"
-            android:textColor="@color/white"
-            android:textSize="25dp"
+            android:textColor="@color/black"
+            android:textSize="20dp"
             android:layout_gravity="center"
             android:id="@+id/ans1"/>
 
-    </LinearLayout>
 
 
-        <LinearLayout
-            android:orientation="vertical"
+        <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/middle1"
-            android:layout_marginTop="50dp"
-            android:layout_below="@+id/linearLayout3"
-            android:layout_centerHorizontal="true">
+            android:text="ans2"
+            android:layout_gravity="center"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            android:id="@+id/ans2"
+            android:layout_marginTop="20dp"/>
 
 
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="ans2"
-                    android:layout_gravity="center"
-                    android:textColor="@color/white"
-                    android:textSize="25dp"
-                    android:id="@+id/ans2"/>
-        </LinearLayout>
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/middle2"
-        android:layout_marginTop="50dp"
-        android:layout_below="@+id/middle1">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="ans3"
-                android:textColor="@color/white"
-                android:textSize="25dp"
-                android:id="@+id/ans3"/>
-
-
-
-        </LinearLayout>
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:layout_below="@+id/middle2"
-        android:id="@+id/last">
-
-        <TextView
-            android:layout_width="wrap_content"
+        <Button
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:textColor="@color/white"
+            android:text="ans3"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            android:id="@+id/ans3"
+            android:layout_marginTop="20dp"/>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textColor="@color/black"
             android:text="ans4"
-            android:textSize="25dp"
-            android:id="@+id/ans4"/>
+            android:textSize="20dp"
+            android:id="@+id/ans4"
+            android:layout_marginTop="20dp"/>
 
     </LinearLayout>
-
-
-
 
 </RelativeLayout>
