--- a/app/src/main/res/layout/fragment_incorrect.xml
+++ b/app/src/main/res/layout/fragment_incorrect.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.thait.mathetistics.Correct">
+    tools:context="com.example.thait.mathetistics.Incorrect">
 
     <!-- TODO: Update blank fragment layout -->
     <LinearLayout
@@ -10,20 +10,20 @@
         android:layout_height="match_parent"
         android:orientation="horizontal"
         android:gravity="center"
-        android:background="@color/green">
+        android:background="@color/red">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="25dp"
-            android:text="Correct!"
+            android:text="Incorrect!"
             android:layout_marginRight="30dp"
             android:textColor="@color/white" />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/ok_correct"
+            android:id="@+id/ok_incorrect"
             android:text="Ok"/>
 
     </LinearLayout>
