--- a/app/src/main/res/layout/activity_scored.xml
+++ b/app/src/main/res/layout/activity_scored.xml
@@ -44,7 +44,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="congrats"
+            android:text=""
             android:id="@+id/gratz"
             android:textColor="@color/red"
             android:textSize="40dp"
