--- a/app/src/main/res/layout/fragment_correct.xml
+++ b/app/src/main/res/layout/fragment_correct.xml
@@ -7,24 +7,17 @@
     <!-- TODO: Update blank fragment layout -->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:gravity="center"
         android:background="@color/green">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="25dp"
+            android:textSize="25sp"
             android:text="Correct!"
-            android:layout_marginRight="30dp"
             android:textColor="@color/white" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/ok_correct"
-            android:text="Ok"/>
 
     </LinearLayout>
 
