--- a/app/src/main/res/layout/fragment_incorrect.xml
+++ b/app/src/main/res/layout/fragment_incorrect.xml
@@ -7,9 +7,9 @@
     <!-- TODO: Update blank fragment layout -->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
+        android:layout_height="wrap_content"
         android:gravity="center"
+        android:layout_gravity="center"
         android:background="@color/red">
 
         <TextView
@@ -17,14 +17,7 @@
             android:layout_height="wrap_content"
             android:textSize="25dp"
             android:text="Incorrect!"
-            android:layout_marginRight="30dp"
             android:textColor="@color/white" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/ok_incorrect"
-            android:text="Ok"/>
 
     </LinearLayout>
 
