--- a/app/src/main/res/layout/activity_geometry.xml
+++ b/app/src/main/res/layout/activity_geometry.xml
@@ -29,6 +29,15 @@
         android:layout_alignParentStart="true"
         android:background="@color/white">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Pythagorean Theorem"
+            android:id="@+id/lequation"
+            android:textSize="30dp"
+            android:textColor="@color/blue"
+            android:onClick="pt"/>
     </LinearLayout>
 
 </RelativeLayout>
