--- a/app/src/main/res/layout/activity_directions.xml
+++ b/app/src/main/res/layout/activity_directions.xml
@@ -4,61 +4,68 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingLeft="20dp"
+    android:paddingRight="20dp"
+    android:paddingTop="10dp"
     tools:context="com.example.thait.mathetistics.Directions">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="10dp"
-        android:orientation="vertical">
+        android:layout_gravity="center">
 
-        <ImageView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:src="@drawable/mathrelaylogo"/>
+            android:layout_height="match_parent"
+            android:layout_marginBottom="10dp"
+            android:orientation="vertical">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Directions:"
-            android:textColor="@color/blue"
-            android:textSize="25sp"/>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:src="@drawable/mathrelaylogo"/>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:textColor="@color/blue"
-            android:textSize="20sp"
-            android:text="Welcome to the Math Relay! In this game, there are a total of 7 questions. You will have 15 seconds to complete each question. At the end, you can view your score and see where you stack up against the rest of the world!"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Directions:"
+                android:textColor="@color/blue"
+                android:textSize="25sp"/>
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:text="Start!"
-            android:textColor="@color/blue"
-            android:textSize="20sp"
-            android:onClick="Problems"
-            android:id="@+id/start_game"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:textColor="@color/blue"
+                android:textSize="20sp"
+                android:text="Welcome to the Math Relay! In this game, there are a total of 7 questions. You will have 15 seconds to complete each question. At the end, you can view your score and see where you stack up against the rest of the world!"/>
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:textColor="@color/black"
-            android:text="Cancel"
-            android:textSize="20dp"
-            android:onClick="cancelClicked"
-            android:id="@+id/cancel_game"/>
-    </LinearLayout>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@color/blue"
+                android:text="Start!"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:onClick="Problems"
+                android:id="@+id/start_game"/>
 
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:textColor="@color/blue"
+                android:text="Cancel"
+                android:textSize="20dp"
+                android:onClick="cancelClicked"
+                android:id="@+id/cancel_game"/>
+        </LinearLayout>
+
+    </ScrollView>
 </RelativeLayout>
