--- a/app/src/main/res/layout/activity_qregistration.xml
+++ b/app/src/main/res/layout/activity_qregistration.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.thait.mathetistics.QRegistration"
+    android:orientation="vertical"
     android:background="#2196F3">
 
 
@@ -24,99 +25,90 @@
             android:textSize="25sp"
             android:textColor="@color/white"
             android:textStyle="bold"/>
+    </LinearLayout>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:layout_below="@+id/qRegister"
+            android:orientation="vertical"
+            android:id="@+id/linearLayout">
+
+            <EditText
+                android:id="@+id/question"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Question"
+                android:textColorHint="@color/white"
+                android:paddingTop="20dp"/>
+
+            <EditText
+                android:id="@+id/ans1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="1. First Answer"
+                android:textColorHint="@color/white"
+                android:paddingTop="20dp"/>
+
+            <EditText
+                android:id="@+id/ans2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="2. Second Answer"
+                android:textColorHint="@color/white"
+                android:paddingTop="20dp"/>
+
+            <EditText
+                android:id="@+id/ans3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="3. Third Answer"
+                android:textColorHint="@color/white"
+                android:paddingTop="20dp"/>
+
+            <EditText
+                android:id="@+id/ans4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="4. Fourth Answer"
+                android:textColorHint="@color/white"
+                android:paddingTop="20dp"/>
+
+            <EditText
+                android:id="@+id/Cans"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Correct Answer"
+                android:textColorHint="@color/white"
+                android:paddingTop="20dp"/>
+
+            <Button
+                android:id="@+id/btn_confirm"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:text="Confirm"
+                android:background="@color/blue"
+                android:textColor="@color/white"/>
+
+            <Button
+                android:id="@+id/cancel_sign_up"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Cancel"
+                android:textColor="@color/blue"
+                android:onClick="clickCancel"
+                android:layout_marginTop="10dp"/>
+
         </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
-        android:layout_below="@+id/qRegister"
-        android:orientation="vertical"
-        android:id="@+id/linearLayout">
+    </ScrollView>
 
-        <EditText
-            android:id="@+id/question"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Question"
-            android:textColorHint="@color/white"
-            android:paddingTop="20dp"/>
-
-        <EditText
-            android:id="@+id/ans1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="1. First Answer"
-            android:textColorHint="@color/white"
-            android:paddingTop="20dp"/>
-
-        <EditText
-            android:id="@+id/ans2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="2. Second Answer"
-            android:textColorHint="@color/white"
-            android:paddingTop="20dp"/>
-
-        <EditText
-            android:id="@+id/ans3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="3. Third Answer"
-            android:textColorHint="@color/white"
-            android:paddingTop="20dp"/>
-
-        <EditText
-            android:id="@+id/ans4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="4. Fourth Answer"
-            android:textColorHint="@color/white"
-            android:paddingTop="20dp"/>
-
-        <EditText
-            android:id="@+id/Cans"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Correct Answer"
-            android:textColorHint="@color/white"
-            android:paddingTop="20dp"/>
-
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="40dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_gravity="center"
-        android:layout_below="@+id/linearLayout">
-
-        <Button
-            android:id="@+id/btn_confirm"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Confirm"
-            android:background="@color/blue"
-            android:textColor="@color/white"
-            android:layout_marginRight="20dp"/>
-
-        <Button
-            android:id="@+id/cancel_sign_up"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Cancel"
-            android:textColor="@color/blue"
-            android:onClick="clickCancel"
-            android:layout_marginLeft="20dp"/>
-
-    </LinearLayout>
-
-</RelativeLayout>
+</LinearLayout>
