--- a/app/src/main/res/layout/activity_exercise.xml
+++ b/app/src/main/res/layout/activity_exercise.xml
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:textSize="25sp"
             android:text="TI"
-            android:textColor="@color/white"
+            android:textColor="@color/Gold"
             android:id="@+id/rightTime"/>
 
         <TextView
