--- a/app/src/main/res/layout/activity_pt.xml
+++ b/app/src/main/res/layout/activity_pt.xml
@@ -59,8 +59,8 @@
         android:id="@+id/pic1"/>
 
     <ImageView
-        android:layout_width="120dp"
-        android:layout_height="60dp"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
         android:src="@drawable/pt_eq"
         android:layout_alignBottom="@+id/button5"
         android:layout_alignRight="@+id/pic1"
@@ -73,14 +73,58 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="c2 = a2 + b2"
+        android:text="c2"
         android:id="@+id/textView9"
         android:layout_below="@+id/linearLayout5"
         android:layout_marginTop="50dp"
         android:textColor="@color/white"
-        android:layout_marginRight="10dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_marginLeft="40dp"
+        android:layout_toRightOf="@+id/pic1"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text=" = "
+        android:id="@+id/equal_sign"
+        android:layout_below="@+id/linearLayout5"
+        android:layout_marginTop="50dp"
+        android:textColor="@color/white"
+        android:layout_toRightOf="@+id/textView9"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="a2"
+        android:id="@+id/a_square"
+        android:layout_below="@+id/linearLayout5"
+        android:layout_marginTop="50dp"
+        android:textColor="@color/white"
+        android:layout_toRightOf="@+id/equal_sign"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text=" + "
+        android:id="@+id/plus_sign"
+        android:layout_below="@+id/linearLayout5"
+        android:layout_marginTop="50dp"
+        android:textColor="@color/white"
+        android:layout_toRightOf="@+id/a_square"/>
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="b2"
+        android:id="@+id/b_square"
+        android:layout_below="@+id/linearLayout5"
+        android:layout_marginTop="50dp"
+        android:textColor="@color/white"
+        android:layout_toRightOf="@+id/plus_sign"/>
 
     <Button
         android:layout_width="wrap_content"
@@ -97,13 +141,33 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="c = _______"
+        android:text="c2"
         android:id="@+id/textView10"
         android:textColor="@color/white"
         android:layout_marginTop="30dp"
+        android:layout_marginLeft="40dp"
         android:layout_below="@+id/textView9"
-        android:layout_alignRight="@+id/p_t"
-        android:layout_alignEnd="@+id/p_t" />
+        android:layout_toRightOf="@+id/pic1"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text=" = "
+        android:id="@+id/textView11"
+        android:textColor="@color/white"
+        android:layout_marginTop="30dp"
+        android:layout_below="@+id/textView9"
+        android:layout_toRightOf="@+id/textView10" />
+
+    <Button
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:text="Drop"
+        android:id="@+id/button6"
+        android:layout_above="@+id/pic2"
+        android:layout_toRightOf="@+id/textView11"
+        android:layout_marginBottom="20dp"/>
 
 
 </RelativeLayout>
